# aalto_floats

./: .gitignore  readme.md
AaltoFloatsEdge/: azuremonitoring.md  deployment.debug.template.json  deployment.direct.template.json  deployment.measurements.template.json  deployment.rasp.template.json  deployment.rasp_gps.template.json  deployment.rasp_hydro.template.json  deployment.simulate.rasp.template.json  deployment.template.json  deployment.test.template.json  deployment.usbcam.template.json  monitoring.md  readme.md
AaltoFloatsEdge/modules/GNSSModule/: Dockerfile.amd64  Dockerfile.arm64v8  main.py  module.json  requirements.txt
AaltoFloatsEdge/modules/ImageClassifierModule/: Dockerfile.amd64  module.json  readme.md
AaltoFloatsEdge/modules/SimulatedDVL/: Dockerfile.arm32v7  main.py  module.json  org.txt  readme.md  sampledata.json
AaltoFloatsEdge/modules/audioModule/: evologic_refe.py  main.py  module.json
AaltoFloatsEdge/modules/ctdModule/: main.py  module.json
AaltoFloatsEdge/modules/ctdmodule/: main.py  module.json  test_ctd.py
AaltoFloatsEdge/modules/directMethodTest/: directMethod.py  main.py  module.json  readme.md
AaltoFloatsEdge/modules/diveControlModule/: module.json
AaltoFloatsEdge/modules/dvlHandler/: main.py  module.json
AaltoFloatsEdge/modules/dvlmodule/: Dockerfile.org  dvl_socket.py  main.old  main.py  module.json  readme.md  ref.py
AaltoFloatsEdge/modules/gnssmodule/: main.py  module.json
AaltoFloatsEdge/modules/hydrocmodule/: CMakeLists.txt  Dockerfile.arm32v7  main.c  module.json  rawMCP3202.h
AaltoFloatsEdge/modules/hydromodule/: CMakeLists.txt  Dockerfile.arm32v7  Dockerfile.arm64v8  Dockerfile.old.arm32v7  README.md  doc.arm32.refe  main.c  module.json  rawMCP3202.c  refe.c
AaltoFloatsEdge/modules/hydronativemodule/: Dockerfile.arm32v7  Dockerfile.arm64v8  host_ADC_raw.py  main.py  module.json  readme.md  run_raw_local.py
AaltoFloatsEdge/modules/hydropymodule/: main.py  module.json  readme.md  requirements.txt  test_temp.py
AaltoFloatsEdge/modules/localWrite/: main.py  module.json
AaltoFloatsEdge/modules/logmodule/: main.py  (+7 more)
AaltoFloatsEdge/scripts/: .gitignore  direct_method.py  logs.txt  mod_restart.sh  module_restart.sh  module_status.sh  readme.md
config/: deployment.test.amd64.json
(+15 files in other folders)
